@@ -1,3 +1,7 @@
+2009-06-23  Oliver Hader  <oliver@typo3.org>
+
+	* Cleanup: Added method to be used on delegating actions to the static cache data manipulation object 
+
 2009-06-22  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Information whether page is marked dirty is missing in info module
